--- a/web/package.json
+++ b/web/package.json
@@ -21,10 +21,7 @@
     "less": "^3.0.2",
     "less-loader": "^4.1.0",
     "nprogress": "^0.2.0",
-    "progress": "^2.0.0",
-    "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "progress": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
